test/2/parse/num-literal-double-dot.err
parse error: test/2/parse/num-literal-double-dot.ploy:1:1-4: unexpected token: flt.
| 0.0.0
  ~~~
